[gd_scene load_steps=30 format=3 uid="uid://ns3fa7bkmwek"]

[ext_resource type="Texture2D" uid="uid://ba5dg03jleghv" path="res://assests/marsh-sci-fi/scifi/anims/scifi_marine_die_1.png" id="1_f1ek2"]
[ext_resource type="Script" uid="uid://uhyiyl76qkln" path="res://scripts/player.gd" id="1_fd4e3"]
[ext_resource type="Texture2D" uid="uid://cr6k5dmqbvxwg" path="res://assests/marsh-sci-fi/scifi/anims/scifi_marine_stand_1.png" id="1_vgqql"]
[ext_resource type="Texture2D" uid="uid://dgjaa1r6jwff7" path="res://assests/marsh-sci-fi/scifi/anims/scifi_marine_stand_2.png" id="2_fkybt"]
[ext_resource type="Texture2D" uid="uid://dfkxkc035m1xd" path="res://assests/marsh-sci-fi/scifi/anims/scifi_marine_die_2.png" id="2_tx1dd"]
[ext_resource type="Texture2D" uid="uid://bn3axqude82ka" path="res://assests/marsh-sci-fi/scifi/anims/scifi_marine_die_3.png" id="3_gymyn"]
[ext_resource type="Texture2D" uid="uid://bivhjdieoenag" path="res://assests/marsh-sci-fi/scifi/anims/scifi_marine_shoot_1.png" id="3_x3wgy"]
[ext_resource type="Texture2D" uid="uid://d3c8h8v1wl2ay" path="res://assests/marsh-sci-fi/scifi/anims/scifi_marine_shoot_2.png" id="4_3smsa"]
[ext_resource type="Texture2D" uid="uid://dk6u5j3des1cf" path="res://assests/marsh-sci-fi/scifi/anims/scifi_marine_die_4.png" id="4_pu2lt"]
[ext_resource type="Texture2D" uid="uid://crrd5egnolhj5" path="res://assests/marsh-sci-fi/scifi/anims/scifi_marine_die_5.png" id="5_ukyrk"]
[ext_resource type="Texture2D" uid="uid://b82f6mrqikwnx" path="res://assests/marsh-sci-fi/scifi/anims/scifi_marine_run_1.png" id="8_h4iuc"]
[ext_resource type="Texture2D" uid="uid://cacwf3hifx0wh" path="res://assests/marsh-sci-fi/scifi/anims/scifi_marine_run_2.png" id="9_fd4e3"]
[ext_resource type="Texture2D" uid="uid://cf4tg7efikelr" path="res://assests/marsh-sci-fi/scifi/anims/scifi_marine_run_3.png" id="10_qqcod"]
[ext_resource type="Texture2D" uid="uid://bvs5fnywxwrm4" path="res://assests/marsh-sci-fi/scifi/anims/scifi_marine_run_4.png" id="11_igrcy"]
[ext_resource type="Texture2D" uid="uid://cdw68dueuol3d" path="res://assests/marsh-sci-fi/scifi/anims/scifi_marine_run_5.png" id="12_fs7ks"]
[ext_resource type="Texture2D" uid="uid://cag5muj4c2jkj" path="res://assests/marsh-sci-fi/scifi/anims/scifi_marine_run_6.png" id="13_l6n3p"]
[ext_resource type="FontFile" uid="uid://c0j4rsag0byvt" path="res://assests/haldenweg/Haldenweg.otf" id="17_qqcod"]
[ext_resource type="Texture2D" uid="uid://xn5pdvtdp7eu" path="res://assests/tiny-spaceships/under.png" id="18_l6n3p"]
[ext_resource type="Texture2D" uid="uid://beh4y2dxdrubw" path="res://assests/tiny-spaceships/over.png" id="19_olqyp"]
[ext_resource type="Texture2D" uid="uid://cp0sqdtyew42m" path="res://assests/tiny-spaceships/progress.png" id="20_wpjfl"]
[ext_resource type="Script" uid="uid://ceqhrssdo61pu" path="res://scripts/shop.gd" id="21_olqyp"]
[ext_resource type="AudioStream" uid="uid://ge53hqoh6vot" path="res://assests/laser-gun-81720.mp3" id="22_wpjfl"]

[sub_resource type="SpriteFrames" id="SpriteFrames_f60y1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_f1ek2")
}, {
"duration": 1.0,
"texture": ExtResource("2_tx1dd")
}, {
"duration": 1.0,
"texture": ExtResource("3_gymyn")
}, {
"duration": 1.0,
"texture": ExtResource("4_pu2lt")
}, {
"duration": 1.0,
"texture": ExtResource("5_ukyrk")
}, {
"duration": 1.0,
"texture": ExtResource("5_ukyrk")
}],
"loop": false,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_vgqql")
}, {
"duration": 1.0,
"texture": ExtResource("2_fkybt")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_h4iuc")
}, {
"duration": 1.0,
"texture": ExtResource("9_fd4e3")
}, {
"duration": 1.0,
"texture": ExtResource("10_qqcod")
}, {
"duration": 1.0,
"texture": ExtResource("11_igrcy")
}, {
"duration": 1.0,
"texture": ExtResource("12_fs7ks")
}, {
"duration": 1.0,
"texture": ExtResource("13_l6n3p")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_x3wgy")
}, {
"duration": 1.0,
"texture": ExtResource("4_3smsa")
}, {
"duration": 1.0,
"texture": ExtResource("1_vgqql")
}, {
"duration": 1.0,
"texture": ExtResource("2_fkybt")
}],
"loop": false,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v0iea"]
radius = 12.0
height = 42.0

[sub_resource type="Animation" id="Animation_qqcod"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [10.0]
}

[sub_resource type="Animation" id="Animation_fd4e3"]
resource_name = "new_animation"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 10.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qqcod"]
_data = {
&"RESET": SubResource("Animation_qqcod"),
&"new_animation": SubResource("Animation_fd4e3")
}

[sub_resource type="GDScript" id="GDScript_olqyp"]
script/source = "extends Button

@onready var dmg: Button = $\"../dmg\"
@onready var speed: Button = $\"../speed\"


func _process(delta: float) -> void:
	if $\"..\".visible == false:
		disabled = true 
		dmg.disabled = true
		speed.disabled = true
	else:
		disabled = false
		dmg.disabled = false
		speed.disabled = false
"

[sub_resource type="SegmentShape2D" id="SegmentShape2D_l6n3p"]

[node name="player" type="CharacterBody2D" groups=["Player"]]
scale = Vector2(0.6, 0.6)
script = ExtResource("1_fd4e3")
can_shoot = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_f60y1")
animation = &"shoot"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1.66667, -20)
shape = SubResource("CapsuleShape2D_v0iea")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_top = -2.0
offset_right = 258.0
offset_bottom = 29.0
theme_override_fonts/font = ExtResource("17_qqcod")
theme_override_font_sizes/font_size = 30
text = "              Health"
metadata/_edit_use_anchors_ = true

[node name="health" type="TextureProgressBar" parent="CanvasLayer/Label"]
layout_mode = 0
offset_top = 24.7824
offset_right = 47.0
offset_bottom = 33.7824
scale = Vector2(5.50115, 4.13041)
max_value = 10.0
value = 10.0
rounded = true
texture_under = ExtResource("18_l6n3p")
texture_over = ExtResource("19_olqyp")
texture_progress = ExtResource("20_wpjfl")
metadata/_edit_use_anchors_ = true

[node name="power" type="Label" parent="CanvasLayer"]
offset_left = 49.0
offset_top = 73.0
offset_right = 217.0
offset_bottom = 104.0
theme_override_fonts/font = ExtResource("17_qqcod")
theme_override_font_sizes/font_size = 30
text = "Double Bullet's"
metadata/_edit_use_anchors_ = true

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
modulate = Color(0, 0.779954, 0.822315, 1)
offset_top = 100.0
offset_right = 260.0
offset_bottom = 135.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("17_qqcod")
theme_override_font_sizes/font_size = 30
max_value = 10.0
step = 2.0
value = 10.0
rounded = true
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ProgressBar"]
libraries = {
&"": SubResource("AnimationLibrary_qqcod")
}

[node name="ocin" type="Label" parent="CanvasLayer"]
offset_left = 1022.0
offset_top = 0.0648173
offset_right = 1091.0
offset_bottom = 31.0648
rotation = -0.000921629
scale = Vector2(1.01926, 1.11631)
theme_override_fonts/font = ExtResource("17_qqcod")
theme_override_font_sizes/font_size = 30
text = "Coins:"

[node name="coincounter" type="Label" parent="CanvasLayer"]
offset_left = 1098.0
offset_top = 3.11581
offset_right = 1148.0
offset_bottom = 34.1158
scale = Vector2(1.06847, 1.04978)
theme_override_fonts/font = ExtResource("17_qqcod")
theme_override_font_sizes/font_size = 30

[node name="Panel" type="Panel" parent="CanvasLayer"]
visible = false
offset_left = 196.0
offset_top = 96.0
offset_right = 981.0
offset_bottom = 544.0
script = ExtResource("21_olqyp")

[node name="health" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 566.0
offset_top = 83.0
offset_right = 664.0
offset_bottom = 139.0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("17_qqcod")
theme_override_font_sizes/font_size = 30
text = "BUY"
script = SubResource("GDScript_olqyp")

[node name="dmg" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 566.0
offset_top = 183.0
offset_right = 664.0
offset_bottom = 239.0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("17_qqcod")
theme_override_font_sizes/font_size = 30
text = "BUY"

[node name="speed" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 566.0
offset_top = 283.0
offset_right = 664.0
offset_bottom = 339.0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("17_qqcod")
theme_override_font_sizes/font_size = 30
text = "BUY"

[node name="shop" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -268.5
offset_right = -209.5
offset_bottom = 31.0
grow_horizontal = 2
scale = Vector2(1.98239, 1.6225)
theme_override_fonts/font = ExtResource("17_qqcod")
theme_override_font_sizes/font_size = 30
text = "Shop"

[node name="healt" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -2.5
offset_top = 90.0
offset_right = 74.5
offset_bottom = 121.0
grow_horizontal = 2
scale = Vector2(1.98239, 1.6225)
theme_override_fonts/font = ExtResource("17_qqcod")
theme_override_font_sizes/font_size = 30
text = "Health"

[node name="Label" type="Label" parent="CanvasLayer/Panel/healt"]
layout_mode = 0
offset_left = 143.766
offset_right = 183.766
offset_bottom = 23.0
scale = Vector2(0.794523, 0.940862)
theme_override_fonts/font = ExtResource("17_qqcod")
theme_override_font_sizes/font_size = 30
text = "0/3"

[node name="dmg2" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -170.5
offset_top = 189.0
offset_right = -5.5
offset_bottom = 220.0
grow_horizontal = 2
scale = Vector2(1.98239, 1.6225)
theme_override_fonts/font = ExtResource("17_qqcod")
theme_override_font_sizes/font_size = 30
text = "Bullet damage"

[node name="Label" type="Label" parent="CanvasLayer/Panel/dmg2"]
layout_mode = 0
offset_left = 226.999
offset_right = 281.999
offset_bottom = 31.0
scale = Vector2(0.794523, 0.940862)
theme_override_fonts/font = ExtResource("17_qqcod")
theme_override_font_sizes/font_size = 30
text = "0/3"

[node name="sped" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -232.5
offset_top = 288.0
offset_right = -38.5
offset_bottom = 319.0
grow_horizontal = 2
scale = Vector2(1.98239, 1.6225)
theme_override_fonts/font = ExtResource("17_qqcod")
theme_override_font_sizes/font_size = 30
text = "Movement speed"

[node name="Label" type="Label" parent="CanvasLayer/Panel/sped"]
layout_mode = 0
offset_left = 258.275
offset_right = 313.275
offset_bottom = 31.0
scale = Vector2(0.794523, 0.940862)
theme_override_fonts/font = ExtResource("17_qqcod")
theme_override_font_sizes/font_size = 30
text = "0/3"

[node name="regen" type="Timer" parent="."]
wait_time = 0.6

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("SegmentShape2D_l6n3p")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("22_wpjfl")

[connection signal="pressed" from="CanvasLayer/Panel/health" to="CanvasLayer/Panel" method="_on_health_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/dmg" to="CanvasLayer/Panel" method="_on_dmg_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/speed" to="CanvasLayer/Panel" method="_on_speed_pressed"]
[connection signal="timeout" from="regen" to="." method="_on_regen_timeout"]
